# bcgs

./: bcgs.cabal
app/: Main.hs
src/: Grid.hs  Lattice.hs  Metropolis.hs
